Support Traits with TBBSecurityAssertions while keeping V1.x compat